# single_agent_herding_n_agents_nn

./: CMakeLists.txt  README.md  package.xml
launch/: arbiter.launch  herding.launch  herding_des_odom.launch
src/: arbiter.cpp  herding.cpp  herding_des_odom.cpp  spectraTest.txt
